--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- Main data-->
 		<title>George</title>
-
-		<!-- Scripts -->
 		<script src="./src/solve.js"></script>
 		<script src="./src/foot.js"></script>
-		
-		<!-- Styles -->
 		<link rel="stylesheet" href="./src/styles/styles.css">
-
 	</head>
 	<body>
-		<!-- Header body -->
-		<!-- <header>
-			<img src="./src/img/logotype.png">
-			<h1>George</h1>
-		</header> -->
-
-		<!-- Main body -->
 		<div class="main">
 			<div class="calculator">
 				<div class="calculator__display">
@@ -95,9 +82,8 @@
 			</div>
 		</div>
 
-		<!-- Footer body -->
-		<footer id="footer" onclick="Footer()">
-			<p class="footer__copyleft" id="footer__copyleft">Copyleft (c) RodionMern (Rofionenko)</p>
+		<footer id="footer">
+			<p class="footer__copyleft" id="footer__copyleft" onclick="footerCopyleft()">Copyleft (c) RodionMern (Rofionenko)</p>
 			<ul class="footer__links">
 				<li><a href="https://github.com/rodionmern/rodionmern.github.io/">web-site</a></li>
 				<li><a href="https://github.com/rodionmern/gnush/">gnush</a></li>
